# machine-monitoring-hmi

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: Ros2CommandClient.hpp  Ros2TelemetryClient.hpp  TelemetryModel.hpp
qml/: Main.qml
ros_ws/src/machine_interfaces/: CMakeLists.txt
ros_ws/src/machine_interfaces/machine_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/machine_interfaces/msg/: MachineTelemetry.msg
ros_ws/src/machine_interfaces/srv/: SetThreshold.srv
src/: Ros2CommandClient.cpp  Ros2TelemetryClient.cpp  TelemetryModel.cpp  main.cpp
